// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SSelect.vue can be a multiple select 1`] = `
<slabel-stub label="Select" showoptional="true" for="select">
  <div class="select__container select__container--multiple"><select id="select" name="select" required="required" class="select" multiple="multiple">
      <option value="" disabled="disabled">
        Select an option
      </option>
      <option value="one">
        one
      </option>
      <option value="two">
        two
      </option>
    </select>
    <!---->
    <!---->
  </div>
</slabel-stub>
`;

exports[`SSelect.vue can be disabled correctly 1`] = `
<slabel-stub label="Select" showoptional="true" for="select">
  <div class="select__container select__container--disabled"><select id="select" name="select" required="required" class="select" disabled="disabled">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <option value="one">
        one
      </option>
      <option value="two">
        two
      </option>
    </select>
    <!---->
    <!---->
  </div>
</slabel-stub>
`;

exports[`SSelect.vue can be fullwidth 1`] = `
<slabel-stub label="Select" showoptional="true" for="select" isfullwidth="true">
  <div class="select__container"><select id="select" name="select" required="required" class="select">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <option value="one">
        one
      </option>
      <option value="two">
        two
      </option>
    </select>
    <!---->
    <!---->
  </div>
</slabel-stub>
`;

exports[`SSelect.vue can be inline 1`] = `
<slabel-stub label="Select" showoptional="true" for="select" isinline="true">
  <div class="select__container"><select id="select" name="select" required="required" class="select">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <option value="one">
        one
      </option>
      <option value="two">
        two
      </option>
    </select>
    <!---->
    <!---->
  </div>
</slabel-stub>
`;

exports[`SSelect.vue can be invalid 1`] = `
<slabel-stub label="Select" showoptional="true" for="select">
  <div class="select__container"><select id="select" name="select" required="required" class="select select--invalid">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <option value="one">
        one
      </option>
      <option value="two">
        two
      </option>
    </select>
    <!---->
    <!---->
  </div>
</slabel-stub>
`;

exports[`SSelect.vue can be required 1`] = `
<slabel-stub label="Select" showoptional="true" for="select">
  <div class="select__container"><select id="select" name="select" required="required" class="select">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <option value="one">
        one
      </option>
      <option value="two">
        two
      </option>
    </select>
    <!---->
    <!---->
  </div>
</slabel-stub>
`;

exports[`SSelect.vue can have a single placeholder 1`] = `
<slabel-stub label="Select" showoptional="true" for="select">
  <div class="select__container"><select id="select" name="select" required="required" class="select">
      <option hidden="hidden" value="" disabled="disabled">
        This is a placeholder
      </option>
      <option value="one">
        one
      </option>
      <option value="two">
        two
      </option>
    </select>
    <!---->
    <!---->
  </div>
</slabel-stub>
`;

exports[`SSelect.vue can have an icon on the left 1`] = `
<slabel-stub label="Select" showoptional="true" for="select">
  <div class="select__container"><select id="select" name="select" required="required" class="select select--has-icon-left">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <option value="one">
        one
      </option>
      <option value="two">
        two
      </option>
    </select>
    <sicon-stub icon="activity" iconcolor="green" iconsize="" class="select__icon select__icon--left"></sicon-stub>
    <!---->
  </div>
</slabel-stub>
`;

exports[`SSelect.vue can have an icon on the right 1`] = `
<slabel-stub label="Select" showoptional="true" for="select">
  <div class="select__container"><select id="select" name="select" required="required" class="select select--has-icon-right">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <option value="one">
        one
      </option>
      <option value="two">
        two
      </option>
    </select>
    <!---->
    <sicon-stub icon="activity" iconcolor="green" iconsize="" class="select__icon select__icon--right"></sicon-stub>
  </div>
</slabel-stub>
`;

exports[`SSelect.vue can hide the optional tag 1`] = `
<slabel-stub label="Select" for="select">
  <div class="select__container"><select id="select" name="select" required="required" class="select">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <option value="one">
        one
      </option>
      <option value="two">
        two
      </option>
    </select>
    <!---->
    <!---->
  </div>
</slabel-stub>
`;

exports[`SSelect.vue can set each icon color 1`] = `
<slabel-stub label="Select" showoptional="true" for="select">
  <div class="select__container"><select id="select" name="select" required="required" class="select">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <option value="one">
        one
      </option>
      <option value="two">
        two
      </option>
    </select>
    <!---->
    <!---->
  </div>
</slabel-stub>
`;

exports[`SSelect.vue can use an array of objects for \`selectOptions\` 1`] = `
<slabel-stub label="Select" showoptional="true" for="select">
  <div class="select__container"><select id="select" name="select" required="required" class="select">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <option value="1">
        One
      </option>
      <option value="2">
        Two
      </option>
    </select>
    <!---->
    <!---->
  </div>
</slabel-stub>
`;

exports[`SSelect.vue can use an object of arrays \`selectOptions\` with groups 1`] = `
<slabel-stub label="Select" showoptional="true" for="select">
  <div class="select__container"><select id="select" name="select" required="required" class="select">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <optgroup label="groupOne">
        <option value="1">
          One
        </option>
      </optgroup>
      <optgroup label="groupTwo">
        <option value="2">
          Two
        </option>
      </optgroup>
    </select>
    <!---->
    <!---->
  </div>
</slabel-stub>
`;

exports[`SSelect.vue can use an object of objects for \`selectOptions\` 1`] = `
<slabel-stub label="Select" showoptional="true" for="select">
  <div class="select__container"><select id="select" name="select" required="required" class="select">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <option value="1">
        One
      </option>
      <option value="2">
        Two
      </option>
    </select>
    <!---->
    <!---->
  </div>
</slabel-stub>
`;

exports[`SSelect.vue renders correctly 1`] = `
<slabel-stub label="Select" showoptional="true" for="select">
  <div class="select__container"><select id="select" name="select" required="required" class="select">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <option value="one">
        one
      </option>
      <option value="two">
        two
      </option>
    </select>
    <!---->
    <!---->
  </div>
</slabel-stub>
`;
